# claude-code-visualizer

./: CLAUDE.md  README.md  RELEASING.md  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.github/workflows/: release.yml
docs/plan/: task10-react-frontend-setup.md  task12-session-list-component.md  task13-jsonl-parser-utility.md  task14-message-container-component.md  task15-tool-container-component.md  task2-project-scanner.md  (+6 more)
frontend/: index.html  package-lock.json
old-python-application/: MANIFEST.in  README.md  pyproject.toml  requirements.txt
old-python-application/docs/: 2025-12-07-claude-code-visualizer-design.md  claude-code-project-notes.md
old-python-application/docs/plan/: overview.md  task1-python-project-setup.md  task11-project-list-component.md  task16-session-viewer-component.md  task20-styling-and-visual-design.md  task22-packaging-and-deployment.md  task3-jsonl-metadata-parser.md  task4-flask-server-setup.md  task5-projects-api-endpoint.md  task6-sessions-api-endpoint.md  task7-session-content-api-endpoint.md
old-python-application/frontend/: jest.config.js  package.json
old-python-application/frontend/src/: App.jsx  main.jsx
old-python-application/frontend/src/components/: ProjectList.jsx  ProjectList.test.jsx  SearchBar.jsx  SessionViewer.jsx  ToolContainer.jsx
old-python-application/frontend/src/styles/: main.css
old-python-application/frontend/src/utils/: jsonlParser.test.js  searchUtils.js
old-python-application/scripts/: deploy.sh
old-python-application/src/claude_code_visualizer.egg-info/: SOURCES.txt  requires.txt
old-python-application/src/visualizer/: __main__.py  cli.py  scanner.py  server.py
old-python-application/src/visualizer/static/assets/: index-Bqxrjwo6.js
scripts/: install-locally.sh
(+36 files in other folders)
