[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-visualizer"
version = "0.1.0"
description = "Local web application for debugging Claude Code sessions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Claude Code Visualizer Contributors"}
]
keywords = ["claude", "debugging", "visualization", "development-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
claude-visualizer = "visualizer.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/claude-code-visualizer"
Documentation = "https://github.com/yourusername/claude-code-visualizer/blob/main/README.md"
Repository = "https://github.com/yourusername/claude-code-visualizer"
Issues = "https://github.com/yourusername/claude-code-visualizer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
visualizer = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310']
